Change URI dissector to allow URIs like android-app://...